# nova

./: .gitignore  AGENTS.md  CLAUDE.md  CURRENT.md  LICENSE  PROGRESS.md  README.md  TODOList.md  log.md  pyproject.toml  run_nova.py  user-queries.md
findings/: 2026-06-03-feishu-sync-prerequisites.md  2026-06-05-cc-source-reference.md  2026-06-06-reference-architecture-reading.md  2026-06-07-opencode-crush-source-reference.md  README.md
references/: README.md  agents_md_template.md  bootstrap_prompt_template.md  log_workflow_template.md  todolist_workflow_template.md  user_queries_workflow_template.md
reports/: README.md
static/: app.js  index.html  styles.css
tests/: frontend_approval_deny.test.js  frontend_builtin_commands.test.js  frontend_context_budget.test.js  frontend_history_unavailable.test.js  frontend_hook_contexts.test.js  frontend_langfuse_settings.test.js  frontend_lazy_runtime_panels.test.js  frontend_lsp_panel.test.js  frontend_mcp_panel.test.js  frontend_memory_candidates.test.js  frontend_memory_dialog.test.js  frontend_package_layout.test.js  frontend_permission_events.test.js  frontend_permission_settings.test.js  frontend_queue_events.test.js  frontend_review_panel.test.js  frontend_runtime_events.test.js  frontend_runtime_state.test.js  frontend_session_groups.test.js  frontend_simplified_inspector.test.js  frontend_skills_panel.test.js  frontend_statusline_complete.test.js  frontend_subagents_panel.test.js  frontend_tool_annotation.test.js  frontend_tool_cancel.test.js  frontend_tool_details.test.js  frontend_tooltips.test.js  test_api.py  (+27 more)
(+110 files in other folders)
