[project]
name = "nova"
version = "0.1.0"
description = "Nova local coding agent runtime and workbench"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "langfuse>=3.0",
  "openai>=2.0",
  "uvicorn>=0.30",
  "pydantic>=2.0",
  "zai-sdk>=0.2.2",
]

[project.scripts]
nova = "nova.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
